Add better explanations for file formats

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -139,7 +139,7 @@
           <li><b>Orientation:</b> {{poster.orientation}}</li>
           <li><b>Labels enabled:</b> {{poster.labelsEnabled}}</li>
           <li><b>Zoom level:</b> {{poster.zoomLevel}}</li>
-          <li><b>File format:</b> {{poster.format}} <i>(requested as this format and converted to PNG for visual diff)</i></li>
+          <li><b>File format:</b> {{poster.format}} <i>{{formatDescription}}</i></li>
           <li><b>Endpoint:</b> <a target="_blank" href="{{apiUrl}}">{{serviceExplanation}}</a></li>
         </ul>
 
