Make wording more clearer in labels

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -150,8 +150,8 @@
           <li><b>Labels enabled:</b> {{poster.labelsEnabled}}</li>
           <li><b>Zoom level:</b> {{poster.zoomLevel}}</li>
           <li><b>File format:</b> {{poster.format}} <i>{{formatDescription}}</i></li>
-          <li><b>S3 link:</b> <a target="_blank" href="{{snapshotS3Url}}">{{snapshotS3UrlShort}}</a></li>
-          <li><b>API link:</b> <a target="_blank" href="{{apiUrl}}">{{apiUrlShort}}</a></li>
+          <li><b>Current snapshot:</b> <a target="_blank" href="{{snapshotS3Url}}">{{snapshotS3UrlShort}}</a></li>
+          <li><b>New version:</b> <a target="_blank" href="{{apiUrl}}">{{apiUrlShort}}</a></li>
         </ul>
 
         <div class="image-wrapper image-wrapper-{{diffImageOrientation}}">
